--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,43 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* imports Bulma framework for css */
+@import 'bulma/css/bulma.css';
+a {
+  color: #309875;
+}
+a:hover { text-decoration: none; color:lightgray; }
+
+html, body {
+    background-color: #131313;
+    color: #cccccc;
+}
+
+.subtitle.is-small {
+  font-size: 1rem;
+  color: #cccccc; 
+}
+
+.navbar-item, .navbar-link { 
+  color: #309875;
+  padding-left: 10px; 
+  background-color: #131313;
+}
+
+.title{
+  color: #cccccc
+}
+
+.subtitle{
+  color: lightgray
+}
+
+.label{
+  color: #309875;
+}
+
+a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-item.is-active, .navbar-link:focus, .navbar-link:focus-within, .navbar-link:hover, .navbar-link.is-active {
+  background-color: #131313;
+  color: #cccccc;
+}
