--- a/src/components/art/art.css
+++ b/src/components/art/art.css
@@ -29,16 +29,24 @@
 .art__piececard {
   background-color: white;
   border: 1px dotted black;
-  /* border-radius: 1rem;
-    padding: 1rem;
-    margin: 1rem */
 }
 
 .art__container {
   display: flex; 
   flex-direction: row; 
   flex-wrap: wrap;
-  padding: 50px;
+  padding: 0px 50px 0px 50px;
   margin: 20px;
   border-radius: 3px;
+  justify-content: space-between;
+}
+.art__page_header {
+  display: flex; 
+  flex-direction: row; 
+  flex-wrap: wrap;
+  padding: 0px 50px 0px 50px;
+  margin: 20px;
+  border-radius: 3px;
+  justify-content: space-between;
+  border-bottom: 1px solid rgb(199, 199, 199);
 }
