--- a/src/components/art/art.css
+++ b/src/components/art/art.css
@@ -44,6 +44,7 @@
   display: flex; 
   flex-direction: row; 
   flex-wrap: wrap;
+  width: 100%;
   padding: 0px 50px 0px 50px;
   margin: 20px;
   border-radius: 3px;
