--- a/src/components/artists/artist.css
+++ b/src/components/artists/artist.css
@@ -51,3 +51,17 @@
     justify-content: space-between;
     border-bottom: 1px solid rgb(199, 199, 199);
 }
+input {
+    background-color: transparent;
+    border: none;
+    width: fit-content;
+    height: auto
+}
+
+textarea {
+    min-height: 20rem;
+    width: 100%;
+    white-space: pre-wrap;
+    background-color: transparent;
+    border: none
+}
