registration forms working

--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -60,3 +60,9 @@ fieldset {
     bottom: -2rem;
 }
 
+.register__input, .register__select .register__textarea {
+    background-color: transparent;
+    border: gray;
+    width: fit-content;
+    height: auto
+}
