--- a/src/components/art/art.css
+++ b/src/components/art/art.css
@@ -35,19 +35,19 @@
   display: flex; 
   flex-direction: row; 
   flex-wrap: wrap;
-  padding: 0px 50px 0px 50px;
+  margin: 0 auto;
+  position: relative;
+  width: auto;
+  /* padding: 0px 50px 0px 50px;
   margin: 20px;
   border-radius: 3px;
-  justify-content: space-between;
+  justify-content: space-between; */
 }
-.art__page_header {
-  display: flex; 
-  flex-direction: row; 
-  flex-wrap: wrap;
-  width: 100%;
-  padding: 0px 50px 0px 50px;
-  margin: 20px;
-  border-radius: 3px;
-  justify-content: space-between;
-  border-bottom: 1px solid rgb(199, 199, 199);
+
+.block:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+
+.bottom-border {
+  border-bottom: 1px solid white;
 }
