--- a/src/components/art/art.css
+++ b/src/components/art/art.css
@@ -37,11 +37,7 @@
   flex-wrap: wrap;
   margin: 0 auto;
   position: relative;
-  width: auto;
-  /* padding: 0px 50px 0px 50px;
-  margin: 20px;
-  border-radius: 3px;
-  justify-content: space-between; */
+  width: auto
 }
 
 .block:not(:last-child) {
