--- a/src/components/artists/artist.css
+++ b/src/components/artists/artist.css
@@ -19,15 +19,16 @@
     transition: all 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
-._image {
+.artist__image {
     width: fit-content;
     object-fit: cover;
-    padding: .15rem
+    padding: .15rem;
+    border-radius: 2%
 }
 
 .art__piececard {
     background-color: white;
-    border: 1px dotted black;
+    border-radius: 2%
 }
 
 .art__container {
